--- a/blog.html
+++ b/blog.html
@@ -16,10 +16,7 @@
     <main id="postsList">
     </main>
     <footer>
-        <p> Created whith ❤️ by Aminata Sall</a></p>
-        <ul>
-           <!--<li >Potfolio <a href="https://mameami26.github.io/challange-2/"></a></li>!-->
-        </ul>
+        <p> <a href="https://mameami26.github.io/challange-2/">Created whith ❤️ by Aminata Sall</a></p>
     </footer>
     <script src="assets/js/blog.js"></script>
     <script src="assets/js/logic.js"></script>
